fixed Thought.js, reactions needed to be plural in order for my populate associations to work. also added populate to controllers

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
         "start": "node server.js"
     },
     "keywords": [],
-    "author": "",
+    "author": "erika salcedo",
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
-        "mongoose": "^5.9.7"
+        "mongoose": "^5.12.4",
+        "node": "^15.14.0"
     }
 }
